# nbobservable

./: CMakeLists.txt  README.md  main.cpp
include/nbobservable/: nbobservable.hpp
